--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </div>    
     
     <hr class="featurette-divider">
-<!-- TRAGO 7 --> 
+<!-- TRAGO 7  
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
     <h2 class="featurette-heading text-info">Sweet Dreams <span class="text-muted fuenteCursiva"><p>$5.500</span></p></h2>
@@ -253,7 +253,7 @@
   <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sweet.jpg" alt="">
    </div>
-</div>    
+</div>    -->
 
 <hr class="featurette-divider">
 <!-- TRAGO 8 --> 
@@ -343,7 +343,7 @@
    </div>
 </div>
 
-<!-- TRAGO 15 -->
+<!-- TRAGO 15
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
@@ -356,7 +356,7 @@
   <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/yugen.jpg" alt="">
    </div>
-</div>
+</div> -->
 
     <hr class="featurette-divider">
     <!-- cocteles clasicos -->
@@ -567,7 +567,7 @@
       </tr>
     </tbody>
 </table>
-<!-- coctel gratis-->
+<!-- coctel gratis
     <div id="Free" class="row featurette mb-0">
       <div  class="col-md-6 order-md-2">
         <h2  class="featurette-heading text-warning">Gana tu coctel GRATIS <span class="text-muted fuenteCursiva"><p>Es muy simple</span></p></h2>
@@ -579,7 +579,7 @@
                     <p>4. Disfruta de tu coctel GRATIS!.</p>
                 </h5>
               </p>  
-      </div>   
+      </div>   -->
 
       <div class="col-md-6 order-md-1" height="500">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/saturno.jpg" alt="ramo novia">
