--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
           <li class="nav-item">
             <a class="nav-link colorRosaPastel" href="#comida">Comidas</a>
           </li>
-          <li class="nav-item"></li>
-            <a class="nav-link colorRosaPastel" href="#Free">Coctel Gratis!</a>
-          </li>
+         
           <li class="nav-item"></li>
             <a class="nav-link colorRosaPastel" href="promo.html">PROMOS!</a>
         </li>
@@ -153,13 +151,13 @@
         <p><a class="btn bgBotonRosa text-white" href="https://eze-leky.github.io/ibizadrinks/">Saber Más &raquo;</a></p>
     </div>
 
-    <!-- Coctel gratis-->
+    <!-- Coctel gratis
     <div class="col-lg-4">
       <img class="bd-placeholder-img rounded-circle cover" width="140" height="140" src="./assets/img/trago1.jpeg" >
       <h2 class="fuenteLogo">Ganá un coctel</h2>
       <p>¿Queres ganar un coctel GRATIS?? Fijate como hacerlo.</p>
       <p><a class="btn bgBotonRosa text-white" href="#free">Ir &raquo;</a></p>
-    </div>
+    </div>-->
 
      <!-- TRAGO 1 -->
 
@@ -579,11 +577,11 @@
                     <p>4. Disfruta de tu coctel GRATIS!.</p>
                 </h5>
               </p>  
-      </div>   -->
-
+      </div>   
       <div class="col-md-6 order-md-1" height="500">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/saturno.jpg" alt="ramo novia">
-      </div>    
+      </div>    -->
+
 
 
 
