--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </div>    
     
     <hr class="featurette-divider">
-<!-- TRAGO 7  
+<!-- TRAGO 7  -->
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
     <h2 class="featurette-heading text-info">Sweet Dreams <span class="text-muted fuenteCursiva"><p>$5.500</span></p></h2>
@@ -251,7 +251,7 @@
   <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sweet.jpg" alt="">
    </div>
-</div>    -->
+</div>    
 
 <hr class="featurette-divider">
 <!-- TRAGO 8 --> 
