--- a/index.html
+++ b/index.html
@@ -364,39 +364,43 @@
         <tbody>
       <tr>
         <td>Fernet</td>
-        <td>$5.000</td> 
+        <td>$5.500</td> 
+      </tr>
+           <tr> 
+        <td>Garibaldi (Campari con Naranja)</td>
+        <td>$5.800</td>  
       </tr>
       <tr> 
         <td>Cuba Libre</td>
-        <td>$5.300</td>  
+        <td>$6.00</td>  
       </tr>
       <tr> 
         <td>Pisco Sour</td>
-        <td>$7.500</td>  
+        <td>$8.000</td>  
       </tr>
       <tr> 
         <td>Whisky Sour</td>
-        <td>$7.500</td>  
+        <td>$8.000</td>  
       </tr>
       <tr> 
         <td>Daiquiris (Frutilla, Durazno, Ananá)</td>
-        <td>$6.500</td>  
+        <td>$6.800</td>  
       </tr>
       <tr></tr>
         <td>Piña Colada</td>
-        <td>$6.500</td> 
+        <td>$7.000</td> 
       </tr>
       <tr> 
         <td>Negroni</td>
-        <td>$6.500</td>  
+        <td>$7.600</td>  
       </tr>
       <tr> 
         <td>Caipirinha</td>
-        <td>$5.500</td>  
+        <td>$6.500</td>  
       </tr>
       <tr> 
         <td>Gin Tonic</td>
-        <td>$4.500</td>  
+        <td>$5.500</td>  
       </tr>
       <tr> 
         <td>Sex on The Beach</td>
@@ -404,7 +408,7 @@
       </tr>
       <tr> 
         <td>Mojito</td>
-        <td>$6.000</td>  
+        <td>$6.500</td>  
       </tr>
                 </tbody>
       </table>
@@ -508,15 +512,15 @@
     <tbody>
       <tr>
         <td>Mozzarella</td>
-        <td>$7.000</td> 
+        <td>$8.800</td> 
       </tr>
       <tr> 
         <td>Roquefort</td>
-        <td>$9.000</td>  
+        <td>$12.000</td>  
       </tr>
       <tr> 
         <td>Especial</td>
-        <td>$8.000</td>  
+        <td>$9.700</td>  
       </tr>
     </table>
 
