--- a/index.html
+++ b/index.html
@@ -531,16 +531,16 @@
       </thead>
       <tbody>
         <tr>
-          <td>Clasica</td>
-          <td>$6.000</td> 
+          <td>Clasica ( Medallon de carne 120gr., Queso Cheddar)</td>
+          <td>$8.000</td> 
         </tr>
         <tr> 
-          <td>Completa</td>
-          <td>$7.500</td>  
+          <td>Completa ( Medallon de carne 120gr., jamon, queso, Huevo, lechuga y tomate)</td>
+          <td>$9.500</td>  
         </tr>
         <tr> 
-          <td>Big Tiki</td>
-          <td>$9.000</td>  
+          <td>Big Tiki ( Doble medallon de carne, cheddar, cebolla, Lechuga)</td>
+          <td>$11.000</td>  
         </tr>
       </tbody>
   </table>
@@ -553,7 +553,7 @@
     <tbody>
       <tr>
         <td>Cheddar</td>
-        <td>$6.000</td> 
+        <td>$7.000</td> 
       </tr>
       <tr> 
         <td>Papas Tiki</td>
