--- a/index.html
+++ b/index.html
@@ -531,15 +531,15 @@
       </thead>
       <tbody>
         <tr>
-          <td>Clasica ( Medallon de carne 120gr., Queso Cheddar)</td>
+          <td><p>Clasica</p> ( Medallon de carne 120gr., Queso Cheddar)</td>
           <td>$8.000</td> 
         </tr>
         <tr> 
-          <td>Completa ( Medallon de carne 120gr., jamon, queso, Huevo, lechuga y tomate)</td>
+          <td><p>Completa</p> ( Medallon de carne 120gr., jamon, queso, Huevo, lechuga y tomate)</td>
           <td>$9.500</td>  
         </tr>
         <tr> 
-          <td>Big Tiki ( Doble medallon de carne, cheddar, cebolla, Lechuga)</td>
+          <td><p>Big Tiki</p> ( Doble medallon de carne, cheddar, cebolla, Lechuga)</td>
           <td>$11.000</td>  
         </tr>
       </tbody>
