agregue seccion de comentarios

--- a/index.html
+++ b/index.html
@@ -569,22 +569,18 @@
       </tr>
     </tbody>
 </table>
-<!-- coctel gratis
-    <div id="Free" class="row featurette mb-0">
+<div id="Free" class="row featurette mb-0">
       <div  class="col-md-6 order-md-2">
-        <h2  class="featurette-heading text-warning">Gana tu coctel GRATIS <span class="text-muted fuenteCursiva"><p>Es muy simple</span></p></h2>
+        <h2  class="featurette-heading text-warning">Dejanos tu Comentario en Google <span class="text-muted fuenteCursiva"><p>Es muy simple</span></p></h2>
               <p class="lead" >
-                <h5 class="text-info"><p>1. Saca una foto a alguno de nuestros cocteles.</p>
-                    <p>2. Subí la foto a tus historias de Instagram y etiquetanos @tikihouselp con el Hashtag #TikiHouseLp</p>
-                    <p>Tene en cuenta que para que nos aparezca, tenes que seguirnos y tu perfil debe estar público.</p>
-                    <p>3. Una vez que lo hagas, mostrale al staff que reposteamos tu foto y LISTO!.</p>
-                    <p>4. Disfruta de tu coctel GRATIS!.</p>
+                <h5 class="text-info"><p>Tu Opinion nos interesa!. Dejanos tu comentario sobre nuestro bar y los cocteles que disfrutaste!. Si algo no te gusto ello nos ayudara a mejorar nuestro servicio.
+                </p>
+                <p>
+                  <a href="https://g.page/r/Caw83WM1wKHrEBM/review">Toca Aquí para dejar tu comentario</a>
+                </p>
                 </h5>
               </p>  
-      </div>   
-      <div class="col-md-6 order-md-1" height="500">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/saturno.jpg" alt="ramo novia">
-      </div>    -->
+      </div> 
 
 
 
