--- a/index.html
+++ b/index.html
@@ -344,21 +344,20 @@
    </div>
 </div>
 
-<!-- TRAGO 15
+<!-- TRAGO 15 -->
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-success">Kamaaina (New)<span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
-    <p class="lead" ><p>Gin Yūgen, Hesperidina, Limon, crema de coco, Ginger Ale.</p> Un coctel equilibrado y refrescante, combinado con un gin que marca su presencia.El término “Kamaaina” significa “uno de la familia”, y este cóctel se mantiene fiel a su nombre con una mezcla suave de la crema de coco combinado con la frescura y temple del gin Yūgen, crean un equilibrio tropical y especiado. Perfecto para quienes buscan un sabor auténtico, diferente y local</p>
-    <p><u>Ginger Ale:</u> Gaseosa de gengibre, tambien conocida como ginger beer, pero que no contiene alcohol</p>
-
-  </p> *<a href="https://yugengin.com" style="color:red">Yūgen Dry Gin</a> es el primer gin de estilo japonés hecho en Argentina, inspirado en los sabores de Japón. Elaborado con botánicos orientales obtenidos de productores japoneses en La Plata, busca cautivar a quienes desean explorar algo diferente y elevar su experiencia con este gran destilado. Más Info de Yūgen Gin <a href="https://yugengin.com">Aquí</a> </p>
+    <h2 class="featurette-heading text-success">Perla del Caribe (New)<span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
+    <p class="lead" ><p>Vodka, Aperol, Lima, Sandia, Syrup de Jnegibre</p> Un coctel equilibrado y refrescante, donde el sabor de la sandia es su protagonista, 
+        con leves toques de picor del Jengibre hacen de este coctel una mezcla que no podes dejar de Porbar!</p>
+    </p> 
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/yugen.jpg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sandia.jpg" alt="">
    </div>
-</div> -->
--->
+</div> 
+
     <hr class="featurette-divider">
     <!-- cocteles clasicos -->
        <div id="clasic">
