--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-success">Perla del Caribe (New)<span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
-    <p class="lead" ><p>Vodka, Aperol, Lima, Sandia, Syrup de Jnegibre</p> Un coctel equilibrado y refrescante, donde el sabor de la sandia es su protagonista, 
+    <h2 class="featurette-heading text-success">Perla del Caribe (New)<span class="text-muted fuenteCursiva"><p>$6.800</span></p></h2>
+    <p class="lead" ><p>Vodka, Aperol, Lima, Sandia, Syrup de Jengibre</p> Un coctel equilibrado y refrescante, donde el sabor de la sandia es su protagonista, 
         con leves toques de picor del Jengibre hacen de este coctel una mezcla que no podes dejar de Porbar!</p>
     </p> 
   </div>
