--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <p><u>Coctel para 2 personas</u></p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sandia.jpg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/blood.jpeg" alt="">
    </div>
 </div> 
 
