--- a/index.html
+++ b/index.html
@@ -408,6 +408,21 @@
    </div>
 </div>    
 
+      <!-- TRAGO 19  -->
+       <hr class="featurette-divider">
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-danger">Tikigroni (New)<span class="text-muted fuenteCursiva"><p>$7.600</span></p></h2>
+    <p class="lead" ><p>Gin de coco, Campari de anana, Vermuth Rosso</p><p>Una reinterpretación tropical del clásico Negroni. Su gin de coco aporta suavidad y un toque exótico, 
+      mientras que el Campari de ananá agrega un giro afrutado y vibrante. Combinado con el vermut rosso, crea un cóctel equilibrado y sofisticado, perfecto para los amantes de los 
+      sabores intensos con un toque tropical.</p>
+    
+    
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/tikigroni.jpeg" alt="">
+   </div>
+</div>    
 
     <hr class="featurette-divider">
     <!-- cocteles clasicos -->
