--- a/index.html
+++ b/index.html
@@ -694,6 +694,8 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>  
+  <!-- Vinculamos el archivo JS externo -->
+    <script src="script.js"></script>
 
     <hr class="featurette-divider">
 
