--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>  
   <!-- Vinculamos el archivo JS externo -->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
     <hr class="featurette-divider">
 
