--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button onclick="closeMessage('message1')">Aceptar</button>
 </div>
 <div id="message2" class="message message2">
-    Hoy tenemos promo 2x1 en daiquiri de Frutilla
+    Hoy de 19:00hs a 23:30hs tenemos promo 2x1 en daiquiri de Frutilla
     <button onclick="closeMessage('message2')">Aceptar</button>
 </div>
 
