--- a/index.html
+++ b/index.html
@@ -323,9 +323,8 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-success">Queen´s Road  <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
-    <p class="lead" ><p>Ron, Lima, Naranja, Honey Mix, Jarabe de Jengibre.</p> Una mezcla perfecta entre la calidez del ron con la frescura de los citricos, equilibrado con un toque dulce de honey mix y el leve picor del jengibre. 
-    Este cóctel es perfecto para quienes buscan una experiencia sofisticada y refrescante con un toque especiado..</p>
+    <h2 class="featurette-heading text-success">Queen´s Park Swezzle (New)<span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
+    <p class="lead" ><p>Ron, Lima, Demerara Syrup, Hojas de Menta.</p> Su perfil de sabor es una combinación vibrante de notas cítricas, herbáceas y especiadas, gracias a la mezcla de ron oscuro, lima, menta fresca y angostura bitters.</p>
     
   </div>
   <div class="col-md-6 order-md-1" height="500">
