--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
        <hr class="featurette-divider">
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-danger">Planter´s Punch (NEW) <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <h2 class="featurette-heading text-danger">Planter´s Punch (NEW) <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
     <p class="lead" ><p>Ron, Lima, Naranja, Anana, Granadina.</p><p>Es un cóctel clásico de origen caribeño, famoso por su combinación de ron oscuro,
       cítricos y dulzura equilibrada. Es refrescante, afrutado y con un toque especiado, ideal para los amantes de los tragos tropicales.</p>
   
@@ -418,7 +418,7 @@
        <hr class="featurette-divider">
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-danger">Tikigroni (New)<span class="text-muted fuenteCursiva"><p>$7.600</span></p></h2>
+    <h2 class="featurette-heading text-danger">Tikigroni<span class="text-muted fuenteCursiva"><p>$7.600</span></p></h2>
     <p class="lead" ><p>Gin de coco, Campari de anana, Vermuth Rosso</p><p>Una reinterpretación tropical del clásico Negroni. Su gin de coco aporta suavidad y un toque exótico, 
       mientras que el Campari de ananá agrega un giro afrutado y vibrante. Combinado con el vermut rosso, crea un cóctel equilibrado y sofisticado, perfecto para los amantes de los 
       sabores intensos con un toque tropical.</p>
