--- a/index.html
+++ b/index.html
@@ -168,7 +168,20 @@
     </div>-->
 
 
+ <!-- TRAGO especial pascuas -->
 
+    <hr class="featurette-divider">
+<div id="blue-hawai" class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-primary">The Bunny Secret <p><span class="text-muted fuenteCursiva">$9.000</span></p></h2>
+    <p class="lead">Ron, Cogñac, Cacao, Chocolate Blanco, Frutilla, Naranja y Vainilla</p>
+    <p>Un cóctel exclusivo y misterioso que estara por tiempo limitado. Esta mezcla seductora de ron, coñac, cacao y chocolate blanco se fusiona con frutilla, 
+      naranja y un toque de vainilla para crear una experiencia dulce, intensa y elegante. Acompañado de una pequña sorpresa, es el secreto mejor guardado de la casa Tiki. ¿Te animás a descubrirlo?.</p>
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/bunny.jpg" alt="">
+  </div>
+</div> 
 
      <!-- TRAGO 1 -->
 
