--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <!-- cursos -->
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle cover" width="140" height="140" src="./assets/img/perfil.jpg" >
-        <h2 class="fuenteLogo">Capacitate con Nosotros</h2>
+        <h2 class="fuenteLogo">Nuestro Curso!</h2>
         <p>Aprende con nosotros sobre el mundo de la cocteleria en nuestro curso de bartenders!</p>
         <p><a class="btn bgBotonRosa text-white" href="https://eze-leky.github.io/ibizadrinks/">Saber Más &raquo;</a></p>
     </div>
