--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
           <div class="carousel-caption text-start">
             <h2 class="fuenteCarrusel">Bar exclusivo de cocteleria Exotica Tropical</h2>
-            <p >Mas conocido como cocteleria Tiki</p>
+            <p >Viví el paraiso tropical, con cada coctel!</p>
             
           </div>
         </div>
@@ -109,7 +109,7 @@
         <div class="container">
           <div class="carousel-caption text-end">
             <h2 class="fuenteCarrusel">Unico en La ciudad</h2>
-            <p >Somos el primer bar exlcusivo desde este estilo</p>
+            <p >Somos el primer bar exlcusivo de cocteles tropicales</p>
            
           </div>
         </div>
@@ -150,7 +150,13 @@
         <p>Aquí encontraras nuestra carta de comidas</p>
         <p><a class="btn bgBotonRosa text-white" href="#comida">Ir &raquo;</a></p>
       </div>
-
+<!-- Mugs -->
+      <div class="col-lg-4">
+        <img class="bd-placeholder-img rounded-circle cover" width="140" height="140" src="./assets/img/one.jpg" >
+        <h2 class="fuenteLogo">Tiki MUgs</h2>
+        <p>Llevate un recuerdo! Elegi el tiki Mug que mas te gusto!</p>
+        <p><a class="btn bgBotonRosa text-white" href="./mugs/index.html">Ir &raquo;</a></p>
+      </div>
         <!-- cursos -->
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle cover" width="140" height="140" src="./assets/img/tiki2.jpg" >
