--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 <!-- Mugs -->
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle cover" width="140" height="140" src="./assets/img/one.jpg" >
-        <h2 class="fuenteLogo">Tiki MUgs</h2>
-        <p>Llevate un recuerdo! Elegi el tiki Mug que mas te gusto!</p>
+        <h2 class="fuenteLogo">Tiki Mugs</h2>
+        <p>Llevate un recuerdo! Elegí el tiki Mug que mas te guste y llevatelo!</p>
         <p><a class="btn bgBotonRosa text-white" href="./mugs/index.html">Ir &raquo;</a></p>
       </div>
         <!-- cursos -->
