--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <p class="lead" ><p>Ron, Syrup Maracuya, Limon, Naranja,Anana, Pomelo, Arandanos, Honey Mix.</p>Un coctel con un Perfil Dulce, tropical y un toque citrico, Con jugos frescos y el infaltable ron, es ideal para aquellos que buscan un equilibrio entre dulzura y acidez, llevándote a un rincón exótico del Pacífico.</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/kikuya.jpeg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/kikuyaa.jpg" alt="">
    </div>
 </div> 
 
@@ -343,7 +343,7 @@
     <p class="lead" ><p>Ron, Syrup de canela, Mango, Kiwi, Lima, Naranja y Anana.</p>Una explosión tropical que combina el carácter del ron con la dulzura del mango y el ananá, equilibrado con la frescura del kiwi y los cítricos. Un toque de syrup de canela agrega calidez a este cóctel, ideal para quienes buscan un viaje exótico lleno de sabor.</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/bang.jpeg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/tikibang.jpg" alt="">
    </div>
 </div>
       
