--- a/mugs/index.html
+++ b/mugs/index.html
@@ -31,7 +31,7 @@
     <div class="bg-white p-6 rounded-xl shadow-xl text-center">
       <img src="img/zombie.jpg" alt="Sunset Edition" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
       <h3 class="text-xl font-bold text-orange-800">Mug “Zombie”</h3>
-      <!--<p class="text-orange-700 text-sm mt-2">Para tu coctel que levanta los muertos!</p>-->
+      <!--<p class="text-orange-700 text-sm mt-2">Disponible en dos colores!</p>-->
       <p class="text-green-700 font-bold mt-2">$30.000 ARS</p>
       <a href="https://wa.me/5492216005043?text=Hola!%20Quiero%20el%20Zombie!" target="_blank">
         <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Comprar</button>
@@ -84,11 +84,24 @@
   <div class="bg-white p-6 rounded-xl shadow-xl text-center">
     <img src="img/zombie2.jpeg" alt="Jungle Spirit" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
     <h3 class="text-xl font-bold text-orange-800">Tiki Mug “Zombie 2”</h3>
+    <p class="text-orange-700 text-sm mt-2">Disponible en dos colores!</p>
     <p class="text-green-700 font-bold mt-2">$30.000 ARS</p>
     <a href="https://wa.me/5492216005043?text=Hola!%20Quiero%20el%20Zombie2!" target="_blank">
       <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Comprar</button>
     </a>
   </div>
+
+    <!-- Mug 7 -->
+  <div class="bg-white p-6 rounded-xl shadow-xl text-center">
+    <img src="img/kanaloaa.jpg" alt="Jungle Spirit" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
+    <h3 class="text-xl font-bold text-orange-800">Tiki Mug “Kanaloa”</h3>
+    <p class="text-orange-700 text-sm mt-2">Disponible en dos colores!</p>
+    <p class="text-green-700 font-bold mt-2">$30.000 ARS</p>
+    <a href="https://wa.me/5492216005043?text=Hola!%20Quiero%20el%20Kanaloa!" target="_blank">
+      <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Comprar</button>
+    </a>
+  </div>
+    
   </section>
 
  
