--- a/index.html
+++ b/index.html
@@ -347,19 +347,19 @@
    </div>
 </div>
       
-<!-- TRAGO 15 
+<!-- TRAGO 15 -->
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-success">Perla del Caribe <span class="text-muted fuenteCursiva"><p>$7.800</span></p></h2>
-    <p class="lead" ><p>Vodka, Aperol, Lima, Sandia, Syrup de Jengibre</p> Un coctel equilibrado y refrescante, donde el sabor de la sandia es su protagonista, 
-        con leves toques de picor del Jengibre hacen de este coctel una mezcla que no podes dejar de Probar!</p>
+    <h2 class="featurette-heading text-success">Dr. Funk <span class="text-muted fuenteCursiva"><p>$7.800</span></p></h2>
+    <p class="lead" ><p>Ron de Cuba , lima , Demerara, Absenta, Soda </p> Un coctel donde la mezcla de Ron y anis son protagonistas. Inspirado en una bebida creada por Bernard Funk, que solia prescribir un elixir para la tension baja provocada por el calor de Apia, Samoa. El dr. solia decir "Toma dos de estos, y llamame en la mañana".
+        Desde el año 1920 se tomaba en el pacifico Sur.</p>
     </p> 
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sandia.jpg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/IMG_6233.jpeg" alt="">
    </div>
-</div> -->
+</div> 
       <!-- TRAGO 16 -->
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
