--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
          <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
         </div>
       <div class="col-md-6">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/zombieee.jpg" alt="">   
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/zombie2.jpeg" alt="">   
       </div>
     </div>
 
@@ -654,3 +654,4 @@
       
   </body>
 </html>
+
