--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
       <table class="table table-dark table-striped">
       <thead>
         <tr><h3 class="text-center mb-4">Hamburguesas </h3></tr>
-        <tr><h5 class="text-center mb-2 style="font-size: 0.9rem;">Todas vienen con una pequeña porcion de papas</h5></tr>
+        <tr><h5 class="text-center mb-2 style="font-size: 0.9rem;">Todas vienen acompañadas de una pequeña porción de papas</h5></tr>
       </thead>
       <tbody>
         <tr>
@@ -667,6 +667,7 @@
       
   </body>
 </html>
+
 
 
 
