--- a/index.html
+++ b/index.html
@@ -557,7 +557,14 @@
                     <td>Agua Con o Sin Gas</td>
                     <td>$4.000</td> 
                   </tr>
-                  
+              <tr></tr>
+                    <td>Café</td>
+                    <td>$3.000</td> 
+                  </tr>
+                  <tr></tr>
+                    <td>Café con leche</td>
+                    <td>$3.800</td> 
+                  </tr>
                   </tbody>
               </table>
           </div>
@@ -667,6 +674,7 @@
       
   </body>
 </html>
+
 
 
 
