--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <div class="row featurette">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-danger">Zombie <span class="text-muted fuenteCursiva"><p>$11.000</span></p></h2>
-        <p class="lead" ><p>Ron Blanco, Ron de Jamaica, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
+        <p class="lead" ><p>Ron Blanco, Ron Dorado, Falernum, Lima, Pomelo, Canela y mucho FUEGO!</p><p>El Zombie es un cóctel tiki legendario, 
         creado en 1934 por Donn Beach (Don the Beachcomber), pionero de la cultura tiki en EE. UU. Este coctel es famoso por "revivir a los muertos". Tradicionalmente, se limita a uno o dos por persona debido a su alto contenido alcohólico, pero aquí podemos dejarte llegar al 3ero.</p>
          <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
         </div>
@@ -679,6 +679,7 @@
       
   </body>
 </html>
+
 
 
 
