--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <p class="lead" ><p>Ron Blanco, Ron Dorado, Frutos Rojos, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/trago4.jpeg" alt=""></div>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sharknuevo.jpg" alt=""></div>
     </div>    
     <hr class="featurette-divider"> 
    <!-- TRAGO 6 -->
@@ -679,6 +679,7 @@
       
   </body>
 </html>
+
 
 
 
