--- a/mugs/index.html
+++ b/mugs/index.html
@@ -38,6 +38,21 @@
       </a>
     </div>
 
+<!-- Mug 1.1 -->
+    <div class="bg-white p-6 rounded-xl shadow-xl text-center">
+      <img src="img/sharknuevo.jpg" alt="Sunset Edition" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
+      <h3 class="text-xl font-bold text-orange-800">Mug “Shark”</h3>
+      <!--<p class="text-orange-700 text-sm mt-2">Disponible en dos colores!</p>-->
+      <p class="text-green-700 font-bold mt-2">$40.000 ARS</p>
+      <a href="https://wa.me/5492216005043?text=Hola!%20Quiero%20el%20Shark!" target="_blank">
+        <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Comprar</button>
+      </a>
+    </div>
+
+
+
+    
+
     <!-- Mug 2 -->
     <div class="bg-white p-6 rounded-xl shadow-xl text-center">
       <img src="img/funk.jpg" alt="Ocean Mask" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
@@ -124,4 +139,5 @@
   </script>
 </body>
 </html>
+
 
