--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/one.jpg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/trago4.jpeg" alt="">
    </div>
 </div> 
      
@@ -679,6 +679,7 @@
       
   </body>
 </html>
+
 
 
 
