--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
       </tr>
       <tr> 
         <td>Papas Tiki ----> (Cheddar,Bacon, verdeo) </td>
-        <td>$12.o00</td>  
+        <td>$12.000</td>  
       </tr>
       <tr> 
         <td>Spicy</td>
@@ -639,6 +639,23 @@
       <tr> 
         <td>Clasicas (Salsa a eleccion: Ketchup, Barbacoa)</td>
         <td>$9.000</td>  
+      </tr>
+    </tbody>
+</table>
+<div id="Free" class="row featurette mb-0">
+  <!-- Tequeños-->
+  <table class="table table-dark table-striped">
+    <thead>
+      <tr><h3 class="text-center mb-4">Tequeños Venezolanos</h3></tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Tequeños x 6 Unidades</td>
+        <td>$7.500</td> 
+      </tr>
+      <tr> 
+        <td>Tequeños x 12 Unidades</td>
+        <td>$14.000</td>  
       </tr>
     </tbody>
 </table>
@@ -679,6 +696,7 @@
       
   </body>
 </html>
+
 
 
 
