--- a/index.html
+++ b/index.html
@@ -322,6 +322,31 @@
    </div>
 </div>
 
+
+<!-- TRAGO 11 bis -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-info">Banana Brezze <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Ron, Falernum, Cordial de Banana y Jengibre , Lima, Ananá, Oleo de Mango.</p>Un cóctel tropical, dulce y refrescante.
+    La mezcla de ron, falernum y cordial de banana con jengibre se equilibra con la acidez de la lima, la frescura del ananá y la suavidad del óleo de mango.
+    Ideal para quienes buscan una experiencia frutal y exótica. </p>
+    <p><u>Falernum:</u> Ron especiado con perfil cítrico</p>
+  
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/bananab.jpg" alt="">
+   </div>
+</div>
+
+
+
+
+
+
+
+      
+
 <!-- TRAGO 12 -->
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
@@ -696,6 +721,7 @@
       
   </body>
 </html>
+
 
 
 
