--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-info">Banana Brezze <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <h2 class="featurette-heading text-info">Banana Breeze <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
     <p class="lead" ><p>Ron, Falernum, Cordial de Banana y Jengibre , Lima, Ananá, Oleo de Mango.</p>Un cóctel tropical, dulce y refrescante.
     La mezcla de ron, falernum y cordial de banana con jengibre se equilibra con la acidez de la lima, la frescura del ananá y la suavidad del óleo de mango.
     Ideal para quienes buscan una experiencia frutal y exótica. </p>
@@ -721,6 +721,7 @@
       
   </body>
 </html>
+
 
 
 
