--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-info">Tiki Coffee Grog <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
+    <h2 class="featurette-heading text-info">Tiki Coffee Grog <span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
     <p class="lead" ><p>Ron, Hesperidina, Vainilla, Falernum, Café.</p>El combustible ideal para seguir la fiesta: energía, dulzura y un toque rebelde en cada sorbo. Café y Ron en la misma copa, ¿qué más se puede pedir? </p>
   
   </div>
@@ -256,7 +256,7 @@
 <hr class="featurette-divider"> 
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
-    <h2 class="featurette-heading text-warning">Tropical Punch <span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
+    <h2 class="featurette-heading text-warning">Tropical Punch <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
     <p class="lead" ><p>Ron, Aperol, Naranja Mango, Lima, Syrup de Jengibre.</p>El golpe alegre del verano eterno: frutal, chispeante y con ese toque atrevido que enciende cualquier aventura.</p>
   <p><u>Perfil</u> Citrico, Tropical</p>
   </div>
@@ -267,7 +267,20 @@
 
 
 
-
+<!-- TRAGO ZanzaPunch -->
+<hr class="featurette-divider"> 
+<div class="row featurette mb-0">
+  <div class="col-md-6 order-md-2">
+    <h2 class="featurette-heading text-info">Zanza Punch <span class="text-muted fuenteCursiva"><p>$7.500</span></p></h2>
+    <p class="lead" ><p>Ron, Hesperidina, Syrup de Maracuya , Lima, </p>El secreto mejor guardado de la isla: fresco, exótico y con un golpe tropical que te atrapa desde el primer sorbo. </p>
+    <p><u>Perfil:</u> Citrico</p>
+    <p><u>Hesperidina:</u> Licor Argentino Premium de cascaras de Naranjas</p>
+  
+  </div>
+  <div class="col-md-6 order-md-1" height="500">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/zanzapunch.jpg" alt="">
+   </div>
+</div>
 
 
 
@@ -735,6 +748,7 @@
       
   </body>
 </html>
+
 
 
 
