--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 </div>
 
 <!-- TRAGO Paraiso Tropical -->
-       TRAGO 6 
+<hr class="featurette-divider"> 
      <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-warning">Paraiso Tropical <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
@@ -231,11 +231,11 @@
     <p class="lead" ><p>Ron dorado, Cordial de Banana y Jengibre, Licor de cacao, Naranja Crema</p>Un coctel dulce, con una explosion de sabores en tu paladar para que luego tengas Dulces Sueños.</p></div>
   <p><u>Perfil</u> Dulce</p>
       <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/temtation.jpg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/tentation.jpg" alt="">
    </div>
 </div>    
 
-<hr class="featurette-divider">
+
 
 <!-- TRAGO Tiki Coffee Grag -->
      
@@ -247,7 +247,7 @@
   
   </div>
   <div class="col-md-6 order-md-1" height="500">
-    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/coffeegrog.jpeg" alt="">
+    <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/coffeegrog.jpg" alt="">
    </div>
 </div>
 
@@ -353,8 +353,10 @@
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
     <h2 class="featurette-heading text-info">Sweet Dreams <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
-    <p class="lead" ><p>Ron, Chocolate Blanco, Ananá, Banana y Crema</p>Un coctel dulce, con una explosion de sabores en tu paladar para que luego tengas Dulces Sueños.</p></div>
+    <p class="lead" ><p>Ron, Chocolate Blanco, Ananá, Banana y Crema</p>Un coctel dulce, con una explosion de sabores en tu paladar para que luego tengas Dulces Sueños.</p>
   <p><u>Perfil</u> Dulce</p>
+  </div>
+  
   <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/sweet.jpg" alt="">
    </div>
@@ -487,15 +489,15 @@
         <td>$9.000</td> 
       </tr>
       <tr> 
-        <td>Negroni Clasico (Negroni Week)</td>
+  <td>Negroni Clasico (<span style="color:red;">Negroni Week</span>)</td>
+  <td>$8.000</td>  
+</tr>
+            <tr> 
+        <td>Negroni Clarificado (<span style="color:red;">Negroni Week</span>)</td>
         <td>$8.000</td>  
       </tr>
             <tr> 
-        <td>Negroni Clarificado (Negroni Week)</td>
-        <td>$8.000</td>  
-      </tr>
-            <tr> 
-        <td>Negroni Ahumado (Negroni Week)</td>
+        <td>Negroni Ahumado (<span style="color:red;">Negroni Week</span>)</td>
         <td>$8.000</td>  
       </tr>
       <tr> 
@@ -748,6 +750,7 @@
       
   </body>
 </html>
+
 
 
 
