--- a/index.html
+++ b/index.html
@@ -228,8 +228,10 @@
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
     <h2 class="featurette-heading text-info">Sweet Temptation <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
-    <p class="lead" ><p>Ron dorado, Cordial de Banana y Jengibre, Licor de cacao, Naranja Crema</p>Un coctel dulce, con una explosion de sabores en tu paladar para que luego tengas Dulces Sueños.</p></div>
+    <p class="lead" ><p>Ron dorado, Cordial de Banana y Jengibre, Licor de cacao, Naranja Crema</p>Un coctel dulce, con una explosion de sabores en tu paladar para que luego tengas Dulces Sueños.</p>
   <p><u>Perfil</u> Dulce</p>
+  </div>
+  
       <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/tentation.jpg" alt="">
    </div>
@@ -750,6 +752,7 @@
       
   </body>
 </html>
+
 
 
 
