--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 <div class="row featurette mb-0">
   <div class="col-md-6 order-md-2">
     <h2 class="featurette-heading text-info">Sweet Temptation <span class="text-muted fuenteCursiva"><p>$6.000</span></p></h2>
-    <p class="lead" ><p>Ron dorado, Cordial de Banana y Jengibre, Licor de cacao, Naranja Crema</p>Un coctel dulce, con una explosion de sabores en tu paladar para que luego tengas Dulces Sueños.</p>
+    <p class="lead" ><p>Ron dorado, Cordial de Banana y Jengibre, Licor de cacao, Naranja, Crema</p>Un guiño dulce y travieso desde la isla: cremoso, tentador y con un encanto tropical imposible de resistir.</p>
   <p><u>Perfil</u> Dulce</p>
   </div>
   
@@ -752,6 +752,7 @@
       
   </body>
 </html>
+
 
 
 
