--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-success">Shark <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
-        <p class="lead" ><p>Ron Blanco, Ron Dorado, Syrup de Frambuesas, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Contel con Notas amargas que te invita a dejarte atrapar por los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
+        <p class="lead" ><p>Ron Blanco, Ron Dorado, Syrup de Frambuesas, Cynar, Vermuth Rosso, Ananá y Lima</p>Una version de Ludovico De Biaggi del coctel Shark Tooth. Un Coctel con Notas amargas que te invita a dejarte atrapar por los dientes de nuestro Shark, y sumergirte en un mar de sabor tropical.</p>
       <p><u>Perfil</u> Amargo, notas citricas</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
@@ -752,6 +752,7 @@
       
   </body>
 </html>
+
 
 
 
