--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <img class="bd-placeholder-img rounded-circle cover" width="140" height="140" src="./assets/img/one.jpg" >
         <h2 class="fuenteLogo">Tiki Mugs</h2>
         <p>Llevate un recuerdo! Elegí el tiki Mug que mas te guste y llevatelo!</p>
-        <p><a class="btn bgBotonRosa text-white" href="./mugs/index.html">Ir &raquo;</a></p>
+        <p><a class="btn bgBotonRosa text-white" href="./mugs/index.html">Elegir &raquo;</a></p>
       </div>
         <!-- cursos -->
       <div class="col-lg-4">
@@ -196,7 +196,7 @@
      <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-warning">Paraiso Tropical <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
-        <p class="lead" ><p>Ron, Falernum, Syrup Maracuya, Naranja, Lima</p>Frutal y muy refrescante con la medida perfecta de Gin. A pesar de que el gin no es una bebida común entre los tikis su presencia convierte a este coctel en una obra maestra.</p>
+        <p class="lead" ><p>Ron, Falernum, Syrup Maracuya, Naranja, Lima</p>Un viaje directo al corazón de la selva: fresco, vibrante y con la energía frutal que convierte cada sorbo en pura escapada exótica.</p>
         <p><u>Perfil</u> Agridulce</p>
         
       </div>
@@ -328,7 +328,7 @@
     <div class="row featurette mb-0">
       <div class="col-md-6 order-md-2">
         <h2 class="featurette-heading text-info">Tiki Barrel <span class="text-muted fuenteCursiva"><p>$8.000</span></p></h2>
-        <p class="lead" ><p>Ron Blanco, Ron Dorado, Maracuya, Naranja, Ananá, Banana y Vainilla</p> Una de las estrellas de la casa. Una combinacion perfecta entre el dulce y un toque citrico. La cura perfecta para un corazon roto.</p>
+        <p class="lead" ><p>Ron Blanco, Ron Dorado, Maracuya,Lima, Naranja, Ananá, Banana y Vainilla</p> Una de las estrellas de la casa. Una combinacion perfecta entre el dulce y un toque citrico. La cura perfecta para un corazon roto.</p>
      <p><u>Perfil</u> Dulce</p>
       </div>
       <div class="col-md-6 order-md-1" height="500">
@@ -398,11 +398,6 @@
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/kikuyaa.jpg" alt="">
    </div>
 </div> 
-
-
-
-
-
 
 
 
@@ -752,6 +747,7 @@
       
   </body>
 </html>
+
 
 
 
