--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <div class="col-md-6 order-md-2">
     <h2 class="featurette-heading text-info">Tiki Coffee Grog <span class="text-muted fuenteCursiva"><p>$7.000</span></p></h2>
     <p class="lead" ><p>Ron, Hesperidina, Vainilla, Falernum, Café.</p>El combustible ideal para seguir la fiesta: energía, dulzura y un toque rebelde en cada sorbo. Café y Ron en la misma copa, ¿qué más se puede pedir? </p>
-  
+  <p><u>Hesperidina:</u> Licor Argentino Premium de cascaras de Naranjas</p>
   </div>
   <div class="col-md-6 order-md-1" height="500">
     <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto cover" src="./assets/img/coffeegrog.jpg" alt="">
@@ -747,6 +747,7 @@
       
   </body>
 </html>
+
 
 
 
