--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
     </tbody>
 </table>
 <div id="Free" class="row featurette mb-0">
-  <!-- Tequeños-->
+  <!-- Tequeños
   <table class="table table-dark table-striped">
     <thead>
       <tr><h3 class="text-center mb-4">Tequeños Venezolanos</h3></tr>
@@ -710,7 +710,7 @@
       </tr>
     </tbody>
 </table>
-<div id="Free" class="row featurette mb-0">
+<div id="Free" class="row featurette mb-0">-->
       <div  class="col-md-6 order-md-2">
         <h2  class="featurette-heading text-warning">Dejanos tu Comentario en Google <span class="text-muted fuenteCursiva"><p>Es muy simple</span></p></h2>
               <p class="lead" >
@@ -747,6 +747,7 @@
       
   </body>
 </html>
+
 
 
 
