--- a/index.html
+++ b/index.html
@@ -486,15 +486,15 @@
         <td>$9.000</td> 
       </tr>
       <tr> 
-  <td>Negroni Clasico (<span style="color:red;">Negroni Week</span>)</td>
+  <td>Negroni Clasico </td>
   <td>$8.000</td>  
 </tr>
             <tr> 
-        <td>Negroni Clarificado (<span style="color:red;">Negroni Week</span>)</td>
+        <td>Negroni Clarificado </td>
         <td>$8.000</td>  
       </tr>
             <tr> 
-        <td>Negroni Ahumado (<span style="color:red;">Negroni Week</span>)</td>
+        <td>Negroni Ahumado </td>
         <td>$8.000</td>  
       </tr>
       <tr> 
@@ -747,6 +747,7 @@
       
   </body>
 </html>
+
 
 
 
