--- a/mugs/index.html
+++ b/mugs/index.html
@@ -56,9 +56,10 @@
     <!-- Mug 2 -->
     <div class="bg-white p-6 rounded-xl shadow-xl text-center">
       <img src="img/funk.jpg" alt="Ocean Mask" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
-      <h3 class="text-xl font-bold text-orange-800">Mug “Dr. Funk” (<span style="color:red;">SIN STOCK</span>)</h3> 
+      <h3 class="text-xl font-bold text-orange-800">Mug “Dr. Funk” </h3> 
       <!--<p class="text-orange-700 text-sm mt-2">Azul profundo, ideal para cócteles marinos. Inspirado en la polinesia.</p>-->
       <p class="text-green-700 font-bold mt-1">$30.000 ARS</p>
+      <P>(<span style="color:red;">SIN STOCK</span>)</P>
       <a href="https://wa.me/5492216005043?text=Hola!%20Quiero%20el%20Dr.%20Funk!" target="_blank">
         <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Comprar</button>
       </a>
@@ -79,6 +80,7 @@
       <img src="img/esqueleto.jpg" alt="Jungle Spirit" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
       <h3 class="text-xl font-bold text-orange-800">Mug “Esqueleto”</h3>
       <p class="text-green-700 font-bold mt-2">$30.000 ARS</p>
+      <P>(<span style="color:red;">SIN STOCK</span>)</P>
       <a href="https://wa.me/5492216005043?text=Hola!%20Quiero%20el%20Mug%20Esqueleto!" target="_blank">
         <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Comprar</button>
       </a>
@@ -89,6 +91,7 @@
       <img src="img/moha.jpg" alt="Jungle Spirit" class="w-48 h-48 object-cover mx-auto mb-4 rounded-lg shadow-md transition-transform duration-300 hover:scale-110 cursor-pointer" onclick="openModal(this.src)" />
       <h3 class="text-xl font-bold text-orange-800">Tiki Mug “Maui”</h3>
       <p class="text-green-700 font-bold mt-2">$30.000 ARS</p>
+      <P>(<span style="color:red;">SIN STOCK</span>)</P>
       <a href="https://wa.me/5492216005043?text=Hola!%20Quiero%20el%20Mug%20Maui!" target="_blank">
         <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700">Comprar</button>
       </a>
@@ -139,6 +142,7 @@
   </script>
 </body>
 </html>
+
 
 
 
