--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   
   <div id="message1" class="message">
-    Bienvenidos al tiki bar, cuando estes list@ para ordenar, acércate a la barra para pedir
+    Bienvenidos a nuestra Casa Tiki, cuando estes list@ para ordenar, acércate a la barra para pedir!
     <button onclick="closeMessage('message1')">Aceptar</button>
 </div>
 <div id="message2" class="message message2">
@@ -747,6 +747,7 @@
       
   </body>
 </html>
+
 
 
 
